
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int hex_temp ;
typedef int c ;
typedef int b ;


 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 int printf (char*,char) ;
 int putc (char,int ) ;
 int puts (char*) ;
 int stdout ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 char strtoul (char*,char**,int) ;

int main (int argc, char *argv[])
{
    int i;
    char a,
         k[33],
         k_array[17],
         c[17],
         *b = "D:SKFOIJ(*EHJFL",
         hex_temp[2],
         *endptr;

    if (argc != 3)
    {
        puts ("Usage: foolpw RECOVERY_KEY CONTROL_PASSWORD");
        return 1;
    }
    if (strlen (argv[1]) != 16*2)
    {
        puts ("Recovery key must be 16 hexadecimal bytes (32 characters)");
        return 1;
    }
    if (strlen (argv[2]) > 16)
    {
        puts ("Passwords are limited to 16 characters");
        return 1;
    }
    memset (k, 0, sizeof (b));
    memset (k_array, 0, sizeof (b));
    memset (c, 0, sizeof (c));
    memset (hex_temp, 0, sizeof (hex_temp));
    strcpy (k, argv[1]);
    strcpy (c, argv[2]);

    for (i = 0; i < 16; i++)
    {
        memcpy (hex_temp, &k[i*2], 2);
        k_array[i] = strtoul (hex_temp, &endptr, 16);
        if (*endptr != '\0')
        {
            printf("\nInvalid hexadecimal character \'%c\'\n", *endptr);
            return 1;
        }
        a = (c[i] + b[i]) ^ k_array[i];
        putc (a, stdout);
    }
    puts ("");
    return 0;
}
